--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,38 @@
 volumes:
   postgres_data:
+  n8n_data:
 
 networks:
   ai-collections-network:
     driver: bridge
+
+x-n8n-base: &n8n-base
+  image: n8nio/n8n:latest
+  networks:
+    - ai-collections-network
+  restart: always
+  volumes:
+    - n8n_data:/home/node/.n8n
+  environment:
+    - POSTGRES_DB=${POSTGRES_DB}
+    - POSTGRES_USER=${POSTGRES_USER}
+    - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    - POSTGRES_PORT=${POSTGRES_PORT}
+    - N8N_HOST=${N8N_HOST}
+    - N8N_PORT=${N8N_PORT}
+    - N8N_DIAGNOSTICS_ENABLED=false
+    - N8N_PERSONALIZATION_ENABLED=false
+    - N8N_ENCRYPTION_KEY
+    - N8N_USER_MANAGEMENT_JWT_SECRET
+    - N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS=true
+    - GENERIC_TIMEZONE=${GENERIC_TIMEZONE}
+    - TIMEZONE=${TIMEZONE}
+    - SECRET_KEY=${DJANGO_SECRET_KEY}
+    - SALT=${SALT_N8N_MESSAGE}
+    - MESSAGE=${N8N_MESSAGE}
+    - N8N_PYTHON_ALLOW_ENV=true
+  env_file:
+    - .env
 
 services:
   collection_project:
@@ -17,6 +46,7 @@ services:
       - "8000:8000"
     volumes:
       - ./collection_project:/collection_project
+      - ./test.py:/collection_project/test.py:ro
     env_file:
       - .env
     networks:
@@ -24,6 +54,15 @@ services:
     restart: always
     depends_on:
       - collection_project_db
+
+  n8n:
+    <<: *n8n-base
+    container_name: ai-collections-n8n
+    ports:
+      - "7000:7000"
+    volumes:
+      - n8n_data:/home/node/.n8n
+      - ./n8n/workflows:/workflows
 
   collection_project_db:
     image: postgres:16
