feat: allow host'a n8n istek atması için ekleme yapıldı ve container isim düzenlendi '_' valid olmadığı için..

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ x-n8n-base: &n8n-base
     - .env
 
 services:
-  collection_project:
+  collection-project:
     image: ifmai/collection_project_image
     container_name: collection_project_container
     build:
